gyeongsik-prd/nginx-demo/nginx_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx-deploy
  name: nginx-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-deploy
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx-deploy
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        volumeMounts:
        - name: gyeongsik-clone
          mountPath: "/usr/share/nginx/html"
        lifecycle:
          postStart:
            exec:
              command:
                - /bin/sh
                - -c 
                - |
                  sudo apt-get install curl;
                  curl -s https://storage.cloud.google.com/jgs-test-storage/date.sh | bash -s after;
                  echo "2021-12-03 04:38:15 AM" > /usr/share/nginx/html/index.html;
          preStop:
            exec:
              command:
                - /bin/sh
                - -c
                - |
                  sleep 5;
                  nginx -s quit;
      volumes:
      - name: gyeongsik-clone
        emptyDir: {}
