gyeongsik-prd/nginx-demo/nginx_ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prd-nginx-test 
  namespace: prd-gyeongsik 
  labels:
    app: nginx-deploy
  annotations:
    #networking.gke.io/managed-certificates: "pping-dev-certificate"
    #networking.gke.io/v1beta1.FrontendConfig: "pping-frontend-config" #https://cloud.google.com/kubernetes-engine/docs/how-to/ingress-features#associating_frontendconfig_with_your_ingress
    kubernetes.io/ingress.global-static-ip-name: "kdy-datafusion-ip"
spec:
  rules:
    - host: prd-nginx.gyeongsik-tet.shop
      http:
        paths:
        - backend:
            serviceName: nginx-service
            servicePort: 80
          path: /
